argocd-apps/helm-charts/addons/gitea/manifests/gateway-api-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gitea-route
  namespace: gitea
spec:
  hostnames:
    - "git.virtualthoughts.co.uk"
  parentRefs:
    - name: cilium-api-gateway
      namespace: cilium
      sectionName: https-gateway
  rules:
    - backendRefs:
        - name: "kube-prometheus-stack-alertmanager"
          port: 9093
